vlib/v/checker/tests/func_with_static_keyword_err.out
vlib/v/checker/tests/func_with_static_keyword_err.vv:6:2: warning: unused variable: `a`
    4 | 
    5 | fn main() {
    6 |     a := a__static__b()
      |     ^
    7 | }
vlib/v/checker/tests/func_with_static_keyword_err.vv:6:4: error: assignment mismatch: 1 variable but `a__static__b()` returns 2 values
    4 | 
    5 | fn main() {
    6 |     a := a__static__b()
      |       ~~
    7 | }
