vlib/v/checker/tests/func_with_static_keyword_err.vv
fn a__static__b() (int,int) {
	return 1,2
}

fn main() {
	a := a__static__b()
}